// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordian/> opens and closes the <Accordion /> component 1`] = `
<div
  class="accordion__Container-l3iym9-0 inwkwi"
>
  <div
    class="accordion__Inner-l3iym9-2 hRXtCm"
  >
    <h1
      class="accordion__Title-l3iym9-3 gyvMnx"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Frame-l3iym9-1 lhGwav"
    >
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          What is Netflix?
          <img
            alt="Close"
            src="/images/icons/close-slim.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb open"
        >
          <span>
            Netflix is a streaming service that offers a wide variety of award-winning TV programmes, films, anime, documentaries and more – on thousands of internet-connected devices.

You can watch as much as you want, whenever you want, without a single advert – all for one low monthly price. There's always something new to discover, and new TV programmes and films are added every week!
          </span>
        </div>
      </div>
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          How much does Netflix cost?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Watch Netflix on your smartphone, tablet, smart TV, laptop or streaming device, all for one low fixed monthly fee. Plans start from £5.99 a month. No extra costs or contracts.
          </span>
        </div>
      </div>
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          Where can I watch?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.

You can also download your favourite programmes with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
          </span>
        </div>
      </div>
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          How do I cancel?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account at any time.
          </span>
        </div>
      </div>
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          What can I watch on Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Netflix has an extensive library of feature films, documentaries, TV programmes, anime, award-winning Netflix originals, and more. Watch as much as you want, any time you want.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordian/> rendres the <Accordion /> with a bunny video 1`] = `
<div
  class="accordion__Container-l3iym9-0 inwkwi"
>
  <div
    class="accordion__Inner-l3iym9-2 hRXtCm"
  >
    <h1
      class="accordion__Title-l3iym9-3 gyvMnx"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Frame-l3iym9-1 lhGwav"
    >
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          What is Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Netflix is a streaming service that offers a wide variety of award-winning TV programmes, films, anime, documentaries and more – on thousands of internet-connected devices.

You can watch as much as you want, whenever you want, without a single advert – all for one low monthly price. There's always something new to discover, and new TV programmes and films are added every week!
          </span>
        </div>
      </div>
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          How much does Netflix cost?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Watch Netflix on your smartphone, tablet, smart TV, laptop or streaming device, all for one low fixed monthly fee. Plans start from £5.99 a month. No extra costs or contracts.
          </span>
        </div>
      </div>
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          Where can I watch?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.

You can also download your favourite programmes with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
          </span>
        </div>
      </div>
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          How do I cancel?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account at any time.
          </span>
        </div>
      </div>
      <div
        class="accordion__Item-l3iym9-4 jfJJdL"
      >
        <div
          class="accordion__Header-l3iym9-5 fKRjEP"
        >
          What can I watch on Netflix?
          <img
            alt="Open"
            src="/images/icons/add.png"
          />
        </div>
        <div
          class="accordion__Body-l3iym9-6 xSDDb closed"
        >
          <span>
            Netflix has an extensive library of feature films, documentaries, TV programmes, anime, award-winning Netflix originals, and more. Watch as much as you want, any time you want.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
